--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <style>
     body {
       color: #ffffff;
-      background-color: #0188cc;
-      font-family: Arial, sans-serif;
+      background-color: Tomato;
+      font-family: calibri, sans-serif;
       font-size: 14px;
     }
     
@@ -18,7 +18,7 @@
     }
     
     h2 {
-      font-size: 200%;
+      font-size: 300%;
       font-weight: normal;
       margin-bottom: 0;
     }
@@ -28,7 +28,6 @@
   <div align="center">
 <h1>Congratulations!!</h1>
 <p>We Successfully Created a CICD Pipeline Using GitHub</p>
-    <p>Using Code Build!!!!</p>
   </div>
 </body>
 </html>
